[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Atlas/sprite_slimes(1).png" type="Texture" id=1]
[ext_resource path="res://Nodes/Slimes/Slimes.gd" type="Script" id=2]
[ext_resource path="res://Assets/Atlas/PongRacket.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.5569
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "attacking"
length = 1.5
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 10, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.65
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 228.728
height = 0.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 39.6504
height = 0.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 35.0186
height = 0.0

[node name="Slimes" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.40813, 10.1432 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 11
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attacking = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jumping = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.10191, 10.5311 )
shape = SubResource( 6 )

[node name="Attack_Animation" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Animation"]
position = Vector2( -4.66965, 10.3812 )
shape = SubResource( 7 )

[node name="Dar_Dano" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dar_Dano"]
position = Vector2( -4.12334, 10.5589 )
shape = SubResource( 8 )

[node name="Slime_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 0.31864
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Attack_Animation" to="." method="_on_Attack_Animation_body_entered"]
[connection signal="body_exited" from="Attack_Animation" to="." method="_on_Attack_Animation_body_exited"]
[connection signal="body_entered" from="Dar_Dano" to="." method="_on_Dar_Dano_body_entered"]
